--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Matthew Wilkinson
+	Personal Portfolio
+	AI research/engineering
 -->
 <html>
 	<head>
@@ -23,7 +23,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Home Page</strong></a>
+									<a href="index.html" class="logo"><strong>Home</strong></a>
 									<ul class="icons">
 										<li><a href="https://twitter.com/MWilkinsonsPhD" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="https://www.linkedin.com/in/matthew-wilkinson16/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -193,39 +193,39 @@
 											</ul>
 										</li>
 
-										<li><a href="elements.html">Elements</a></li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
+<!--										<li><a href="elements.html">Elements</a></li>-->
+<!--										<li><a href="#">Etiam Dolore</a></li>-->
+<!--										<li><a href="#">Adipiscing</a></li>-->
 
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
+<!--										<li><a href="#">Maximus Erat</a></li>-->
+<!--										<li><a href="#">Sapien Mauris</a></li>-->
+<!--										<li><a href="#">Amet Lacinia</a></li>-->
 									</ul>
 								</nav>
 
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Ante interdum</h2>
-									</header>
-									<div class="mini-posts">
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-									</div>
-									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
-									</ul>
-								</section>
+<!--							&lt;!&ndash; Section &ndash;&gt;-->
+<!--								<section>-->
+<!--									<header class="major">-->
+<!--										<h2>Ante interdum</h2>-->
+<!--									</header>-->
+<!--									<div class="mini-posts">-->
+<!--										<article>-->
+<!--											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>-->
+<!--											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>-->
+<!--										</article>-->
+<!--										<article>-->
+<!--											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>-->
+<!--											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>-->
+<!--										</article>-->
+<!--										<article>-->
+<!--											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>-->
+<!--											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>-->
+<!--										</article>-->
+<!--									</div>-->
+<!--									<ul class="actions">-->
+<!--										<li><a href="#" class="button">More</a></li>-->
+<!--									</ul>-->
+<!--								</section>-->
 
 							<!-- Section -->
 								<section>
