--- a/aboutme.html
+++ b/aboutme.html
@@ -22,17 +22,18 @@
     <div class="inner">
 
       <!-- Header -->
-      <header id="header">
-        <a href="index.html" class="logo"><strong>Matthew Wilkinson</strong> Portfolio</a>
-        <ul class="icons">
-          <li><a href="https://twitter.com/MWilkinsonsPhD" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-          <li><a href="https://www.linkedin.com/in/matthew-wilkinson16/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-          <li><a href="https://github.com/MRW-Code" class="icon brands fa-github-square"><span class="label">GitHub</span></a></li>
-          <li><a href="https://researchportal.bath.ac.uk/en/persons/matthew-wilkinson" class="fas fa-user-graduate"><span class="label"></span></a></li>
-          <li><a href="https://scholar.google.com/citations?user=3bm2wzEAAAAJ&hl=en" class="ai ai-google-scholar-square"><span class="label"></span></a></li>
-          <li><a href="https://orcid.org/0000-0001-6635-1469" class="ai ai-orcid"><span class="label"></span></a></li>
-        </ul>
-      </header>
+        <header id="header">
+          <a href="index.html" class="logo"><strong>Home</strong></a>
+          <ul class="icons">
+            <li><a href="https://twitter.com/MWilkinsonsPhD" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+            <li><a href="https://www.linkedin.com/in/matthew-wilkinson16/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+            <li><a href="https://github.com/MRW-Code" class="icon brands fa-github-square"><span class="label">GitHub</span></a></li>
+            <li><a href="https://researchportal.bath.ac.uk/en/persons/matthew-wilkinson" class="fas fa-user-graduate"><span class="label"></span></a></li>
+            <li><a href="https://scholar.google.com/citations?user=3bm2wzEAAAAJ&hl=en" class="ai ai-google-scholar-square"><span class="label"></span></a></li>
+            <li><a href="https://orcid.org/0000-0001-6635-1469" class="ai ai-orcid"><span class="label"></span></a></li>
+          </ul>
+        </header>
+
 
       <!-- Content -->
       <section>
@@ -72,84 +73,44 @@
   <!-- Sidebar -->
   <div id="sidebar">
     <div class="inner">
-
-      <!-- Search -->
-      <section id="search" class="alt">
-        <form method="post" action="#">
-          <input type="text" name="query" id="query" placeholder="Search" />
-        </form>
-      </section>
-
       <!-- Menu -->
       <nav id="menu">
         <header class="major">
           <h2>Menu</h2>
         </header>
         <ul>
-          <li><a href="index.html">Homepage</a></li>
-          <li><a href="generic.html">Generic</a></li>
-          <li><a href="elements.html">Elements</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="aboutme.html">About Me</a></li>
           <li>
-            <span class="opener">Submenu</span>
+            <span class="opener">Research Output</span>
             <ul>
-              <li><a href="#">Lorem Dolor</a></li>
-              <li><a href="#">Ipsum Adipiscing</a></li>
-              <li><a href="#">Tempus Magna</a></li>
-              <li><a href="#">Feugiat Veroeros</a></li>
+              <li><a href="#">Journal Papers</a></li>
+              <li><a href="#">Conference Contributions</a></li>
+              <li><a href="#">Coming Soon - In Review</a></li>
             </ul>
           </li>
-          <li><a href="#">Etiam Dolore</a></li>
-          <li><a href="#">Adipiscing</a></li>
           <li>
-            <span class="opener">Another Submenu</span>
+            <span class="opener">Internships and Placements</span>
             <ul>
-              <li><a href="#">Lorem Dolor</a></li>
-              <li><a href="#">Ipsum Adipiscing</a></li>
-              <li><a href="#">Tempus Magna</a></li>
-              <li><a href="#">Feugiat Veroeros</a></li>
+              <li><a href="#">Alan Turing Institute: TRL Software Ltd</a></li>
+              <li><a href="#">Freudenberg Performance Materials Ltd</a></li>
             </ul>
           </li>
-          <li><a href="#">Maximus Erat</a></li>
-          <li><a href="#">Sapien Mauris</a></li>
-          <li><a href="#">Amet Lacinia</a></li>
         </ul>
       </nav>
 
       <!-- Section -->
       <section>
         <header class="major">
-          <h2>Ante interdum</h2>
+          <h2>Contact Details</h2>
         </header>
-        <div class="mini-posts">
-          <article>
-            <a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-            <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-          </article>
-          <article>
-            <a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-            <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-          </article>
-          <article>
-            <a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-            <p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-          </article>
-        </div>
-        <ul class="actions">
-          <li><a href="#" class="button">More</a></li>
-        </ul>
-      </section>
-
-      <!-- Section -->
-      <section>
-        <header class="major">
-          <h2>Get in touch</h2>
-        </header>
-        <p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+        <p>For any questions about me, my research, or collaboration opportunities please reach out!</p>
         <ul class="contact">
-          <li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-          <li class="icon solid fa-phone">(000) 000-0000</li>
-          <li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-            Nashville, TN 00000-0000</li>
+          <li class="icon solid fa-envelope"><a href="mailto:mrw39@bath.ac.uk">mrw39@bath.ac.uk</a></li>
+          <!--										<li class="icon solid fa-phone">(000) 000-0000</li>-->
+          <li class="icon solid fa-home">University of Bath, <br />
+            Bath, <br />
+            UK</li>
         </ul>
       </section>
 
