--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Editorial by HTML5 UP</title>
+		<title>MW Homepage</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -46,7 +46,7 @@
 										my PhD from the Department of Chemical Engineering at the University of Bath. Please check out the pages
 										on this website to see my experience, projects and interests!</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
+											<li><a href="aboutme.html" class="button big">Learn More</a></li>
 										</ul>
 									</div>
 									<span class="image object">
@@ -149,7 +149,7 @@
 										<article>
 											<span class="icon solid fa-industry"></span>
 											<div class="content">
-												<h3>Fredenberg Performance Materials Ltd: Development Technician</h3>
+												<h3>Freudenberg Performance Materials Ltd: Development Technician</h3>
 												<p>12 month industrial placement as part of my integrated MChem masters course.</p>
 											</div>
 										</article>
@@ -161,21 +161,13 @@
 				<!-- Sidebar -->
 					<div id="sidebar">
 						<div class="inner">
-
-							<!-- Search -->
-<!--								<section id="search" class="alt">-->
-<!--									<form method="post" action="#">-->
-<!--										<input type="text" name="query" id="query" placeholder="Search" />-->
-<!--									</form>-->
-<!--								</section>-->
-
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
+										<li><a href="index.html">Home</a></li>
 										<li><a href="aboutme.html">About Me</a></li>
 										<li>
 											<span class="opener">Research Output</span>
@@ -192,52 +184,21 @@
 												<li><a href="#">Freudenberg Performance Materials Ltd</a></li>
 											</ul>
 										</li>
-
-<!--										<li><a href="elements.html">Elements</a></li>-->
-<!--										<li><a href="#">Etiam Dolore</a></li>-->
-<!--										<li><a href="#">Adipiscing</a></li>-->
-
-<!--										<li><a href="#">Maximus Erat</a></li>-->
-<!--										<li><a href="#">Sapien Mauris</a></li>-->
-<!--										<li><a href="#">Amet Lacinia</a></li>-->
 									</ul>
 								</nav>
-
-<!--							&lt;!&ndash; Section &ndash;&gt;-->
-<!--								<section>-->
-<!--									<header class="major">-->
-<!--										<h2>Ante interdum</h2>-->
-<!--									</header>-->
-<!--									<div class="mini-posts">-->
-<!--										<article>-->
-<!--											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>-->
-<!--											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>-->
-<!--										</article>-->
-<!--										<article>-->
-<!--											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>-->
-<!--											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>-->
-<!--										</article>-->
-<!--										<article>-->
-<!--											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>-->
-<!--											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>-->
-<!--										</article>-->
-<!--									</div>-->
-<!--									<ul class="actions">-->
-<!--										<li><a href="#" class="button">More</a></li>-->
-<!--									</ul>-->
-<!--								</section>-->
 
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Get in touch</h2>
+										<h2>Contact Details</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p>For any questions about me, my research, or collaboration opportunities please reach out!</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="icon solid fa-envelope"><a href="mailto:mrw39@bath.ac.uk">mrw39@bath.ac.uk</a></li>
+<!--										<li class="icon solid fa-phone">(000) 000-0000</li>-->
+										<li class="icon solid fa-home">University of Bath, <br />
+											Bath, <br />
+											UK</li>
 									</ul>
 								</section>
 
