--- a/index.html
+++ b/index.html
@@ -172,16 +172,16 @@
 										<li>
 											<span class="opener">Research Output</span>
 											<ul>
-												<li><a href="#">Journal Papers</a></li>
-												<li><a href="#">Conference Contributions</a></li>
-												<li><a href="#">Coming Soon - In Review</a></li>
+												<li><a href="research_output/journal_articles.html">Journal Articles</a></li>
+												<li><a href="research_output/conferences.html">Conference Contributions</a></li>
+												<li><a href="research_output/coming_soon.html">Coming Soon - In Review</a></li>
 											</ul>
 										</li>
 										<li>
 											<span class="opener">Internships and Placements</span>
 											<ul>
-												<li><a href="#">Alan Turing Institute: TRL Software Ltd</a></li>
-												<li><a href="#">Freudenberg Performance Materials Ltd</a></li>
+												<li><a href="internships/turing.html">Alan Turing Institute: TRL Software Ltd</a></li>
+												<li><a href="internships/freudenberg.html">Freudenberg Performance Materials Ltd</a></li>
 											</ul>
 										</li>
 									</ul>
