--- a/aboutme.html
+++ b/aboutme.html
@@ -44,7 +44,27 @@
         <span class="image main"><img src="images/me.jpg" alt="" /></span>
         <hr class="major" />
         <h2>Education</h2>
-        <p> Here is a personal description of me and my professional life - once I add it to the site!</p>
+        <dl>
+          <dt>PhD, University of Bath (2019 - Present)</dt>
+          <dd>
+            <p>Department of Chemical Engineering.</p>
+          </dd>
+          <dt>Master of Chemistry, University of Bath (2015 - 2019)</dt>
+          <dd>
+            <p>Department of Chemistry, MChem (Hons) Chemistry for Drug Discovery with Industrial Placement, Upper second class (2:1).</p>
+          </dd>
+          <dt>A-Levels, Angmering School (2013 - 2015)</dt>
+          <dd>
+            <p>Biology (A*)</p>
+            <p>Chemistry (A)</p>
+            <p>Mathematics (B)</p>
+            <p>AS-Level Physics (B)</p>
+          </dd>
+          <dt>GCSE, Angmering School (2008-2013)</dt>
+          </dd>
+            <p>10 grade A*, 2 grade A including Mathematics (2 x A*) and English (A*)</p>
+          </dd>
+        </dl>
 
         <hr class="major" />
 
