journal_articles.html

--- a/research_output/journal_articles.html
+++ b/research_output/journal_articles.html
@@ -40,7 +40,7 @@
 
                     <h1>Journal Articles</h1>
                     <p>On this page is a collection of all the journal articles I have worked on. There is a short description of
-                    the project and some background context to the project motivations. For technical details,
+                    the project and some personal reflection about the project. For technical details,
                     please follow the link at the bottom of each paper!</p>
 
                     <hr class="major" />
