journal_articles.html

--- a/research_output/conferences.html
+++ b/research_output/conferences.html
@@ -1,10 +1,149 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<!--
+	Editorial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Generic - Editorial by HTML5 UP</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="../assets/css/main.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 </head>
-<body>
+<body class="is-preload">
+
+<!-- Wrapper -->
+<div id="wrapper">
+
+    <!-- Main -->
+    <div id="main">
+        <div class="inner">
+
+            <!-- Header -->
+            <header id="header">
+                <a href="../index.html" class="logo"><strong>Home</strong></a>
+                <ul class="icons">
+                    <li><a href="https://twitter.com/MWilkinsonsPhD" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                    <li><a href="https://www.linkedin.com/in/matthew-wilkinson16/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://github.com/MRW-Code" class="icon brands fa-github-square"><span class="label">GitHub</span></a></li>
+                    <li><a href="https://researchportal.bath.ac.uk/en/persons/matthew-wilkinson" class="fas fa-user-graduate"><span class="label"></span></a></li>
+                    <li><a href="https://scholar.google.com/citations?user=3bm2wzEAAAAJ&hl=en" class="ai ai-google-scholar-square"><span class="label"></span></a></li>
+                    <li><a href="https://orcid.org/0000-0001-6635-1469" class="ai ai-orcid"><span class="label"></span></a></li>
+                </ul>
+            </header>
+
+            <!-- Content -->
+            <section>
+                <header class="main">
+
+                    <h1>Conference Contributions</h1>
+                    <p>On this page is a collection of my contributions to conferences. This includes posters, workshops and presentations.
+                        There is also a short description and some personal reflection about the works presented.</p>
+                    <p>Where possible, my talks have been recorded and shared here!</p>
+
+                    <hr class="major" />
+                    <h2>2022</h2>
+
+                    <h3>Images as Molecular Descriptors for Materials Discovery</h3>
+                    <p><span class="image left"><img src="../images/imgsasdesc.png" alt="" /></span>This project was my first presentation at an international conference!
+                    After the presentations, the work was published in the Journal of Materials Research. You can find more details in the Journal Articles section of this website!<p>
+
+                    <a href="https://www.sciencedirect.com/science/article/pii/S0022354920303567?via%3Dihub" class="button">Go to Paper!</a>
+                    <a href="https://mrw-code.github.io/research_output/journal_articles.html#imgs_vs_desc_journal_article" class="button primary">See In Journal Articles!</a>
+<!--                    <hr class="major" />-->
+<!--                    <h2>2020</h2>-->
+
+<!--                    <h3>Concurrent Antisolvent Electrospraying: A Novel Continuous Crystallization Technique</h3>-->
+<!--                    <p><span class="image left"><img src="../images/elecspray.jpg" alt="" /></span>This paper was the first publication I was ever a part of!<p>-->
+<!--                    <p>In a strange "in at the deep end" moment, in the early months of my PhD, my supervisor suggested we-->
+<!--                        attempt what he called "a paper in a week". Hence, each of the authors on the publication were members of the group-->
+<!--                        at the time. The work looked to combine antisolvent crystallization with electrospraying, the latter being-->
+<!--                        a continuous crystallization method our group had been working on. We each took on differing parts, mine being-->
+<!--                        the old-school anti-solvent crystallization and the SEM imaging. I also developed some code to help-->
+<!--                        normalize the PXRD patterns autonomously, without lots of tinkering on Excel. Given this was my first few weeks of programming,-->
+<!--                        and having seen "Automate the boring stuff" advertised to me often, this seemed a fairly appropriate-->
+<!--                        introduction to programming. </p>-->
+<!--                    <h4>Actions</h4>-->
+
+<!--                    <a href="https://www.sciencedirect.com/science/article/pii/S0022354920303567?via%3Dihub" class="button">Go to Paper!</a>-->
+
+
+
+                    <!--                    <h4>Left &amp; Right</h4>-->
+                    <!--                    <p><span class="image left"><img src="../images/pic01.jpg" alt="" /></span>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>-->
+                    <!--                    <p><span class="image right"><img src="../images/pic02.jpg" alt="" /></span>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>-->
+
+
+                </header>
+
+
+            </section>
+
+        </div>
+    </div>
+
+    <!-- Sidebar -->
+    <div id="sidebar">
+        <div class="inner">
+            <!-- Menu -->
+            <nav id="menu">
+                <header class="major">
+                    <h2>Menu</h2>
+                </header>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../aboutme.html">About Me</a></li>
+                    <li>
+                        <span class="opener">Research Output</span>
+                        <ul>
+                            <li><a href="./journal_articles.html">Journal Articles</a></li>
+                            <li><a href="./conferences.html">Conference Contributions</a></li>
+                            <li><a href="./coming_soon.html">Coming Soon - In Review</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="opener">Internships and Placements</span>
+                        <ul>
+                            <li><a href="../internships/turing.html">Alan Turing Institute: TRL Software Ltd</a></li>
+                            <li><a href="../internships/freudenberg.html">Freudenberg Performance Materials Ltd</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+
+            <!-- Section -->
+            <section>
+                <header class="major">
+                    <h2>Contact Details</h2>
+                </header>
+                <p>For any questions about me, my research, or collaboration opportunities please reach out!</p>
+                <ul class="contact">
+                    <li class="icon solid fa-envelope"><a href="mailto:mrw39@bath.ac.uk">mrw39@bath.ac.uk</a></li>
+                    <!--										<li class="icon solid fa-phone">(000) 000-0000</li>-->
+                    <li class="icon solid fa-home">University of Bath, <br />
+                        Bath, <br />
+                        UK</li>
+                </ul>
+            </section>
+
+            <!-- Footer -->
+            <footer id="footer">
+                <p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+            </footer>
+
+        </div>
+    </div>
+
+</div>
+
+<!-- Scripts -->
+<script src="../assets/js/jquery.min.js"></script>
+<script src="../assets/js/browser.min.js"></script>
+<script src="../assets/js/breakpoints.min.js"></script>
+<script src="../assets/js/util.js"></script>
+<script src="../assets/js/main.js"></script>
 
 </body>
 </html>
