--- a/research_output/journal_articles.html
+++ b/research_output/journal_articles.html
@@ -45,8 +45,7 @@
 
                     <hr class="major" />
                     <h2>2022</h2>
-
-                    <h3>Images of Chemical Structures as Molecular Representations for Deep Learning</h3>
+                    <h3><a id="imgs_vs_desc_journal_article">Images of Chemical Structures as Molecular Representations for Deep Learning</a></h3>
                     <p><span class="image left"><img src="../images/imgsasdesc.png" alt="" /></span>This project was my first publications as the lead author!<p>
                     <p>In chemical applications of AI, it is important to get the information about molecules into a machine readable form. This is more trivial
                     across other areas where you can work with tables of numbers, images or even encoded categories. With molecules however, capturing important details
