journal_articles.html

--- a/research_output/journal_articles.html
+++ b/research_output/journal_articles.html
@@ -51,8 +51,12 @@
                     across other areas where you can work with tables of numbers, images or even encoded categories. With molecules however, capturing important details
                     as inputs a computer can actually use is more difficult, especially when you consider we are working in an environment where there are
                     quite literally infinite inputs. Here, we tried just drawing the molecules and then using deep learning for computer vision. We assessed against other
-                    common molecular representations and the images performed much better!</p>
-                    <a href="https://www.sciencedirect.com/science/article/pii/S0022354920303567?via%3Dihub" class="button">Go to Paper!</a>
+                    common molecular representations and the images performed much better. <p>
+                    <p>This work was also presented at the MRS spring meet conference. You can watch the talk using the button below!</p>
+
+                    <a href="https://www.sciencedirect.com/science/article/pii/S0022354920303567?via%3Dihub" class="button">Go to Paper</a>
+                    <a href="https://www.linkedin.com/posts/matthew-wilkinson16_sustainable-activity-6947600512355557377-PIRY?utm_source=linkedin_share&utm_medium=member_desktop_web" class="button primary">See Conference Video</a>
+
 
                     <hr class="major" />
                     <h2>2020</h2>
