journal_articles.html

--- a/research_output/conferences.html
+++ b/research_output/conferences.html
@@ -50,9 +50,9 @@
                     <p><span class="image left"><img src="../images/imgsasdesc.png" alt="" /></span>This project was my first presentation at an international conference!
                     After the presentations, the work was published in the Journal of Materials Research. You can find more details in the Journal Articles section of this website!<p>
 
-                    <a href="https://www.sciencedirect.com/science/article/pii/S0022354920303567?via%3Dihub" class="button primary">Go to Paper!</a>
-                    <a href="https://mrw-code.github.io/research_output/journal_articles.html#imgs_vs_desc_journal_article" class="button">See In Journal Articles!</a>
-                    <a href="https://www.linkedin.com/posts/matthew-wilkinson16_sustainable-activity-6947600512355557377-PIRY?utm_source=linkedin_share&utm_medium=member_desktop_web" class="button primary">See Presentation Video!</a>
+                    <a href="https://www.sciencedirect.com/science/article/pii/S0022354920303567?via%3Dihub" class="button primary">Go to Paper</a>
+                    <a href="https://mrw-code.github.io/research_output/journal_articles.html#imgs_vs_desc_journal_article" class="button">See In Journal Articles</a>
+                    <a href="https://www.linkedin.com/posts/matthew-wilkinson16_sustainable-activity-6947600512355557377-PIRY?utm_source=linkedin_share&utm_medium=member_desktop_web" class="button primary">See Presentation Video</a>
 
 
                     <!--                    <hr class="major" />-->
