references to conf and articles pages

--- a/research_output/journal_articles.html
+++ b/research_output/journal_articles.html
@@ -46,13 +46,17 @@
                     <hr class="major" />
                     <h2>2022</h2>
                     <h3><a id="imgs_vs_desc_journal_article">Images of Chemical Structures as Molecular Representations for Deep Learning</a></h3>
-                    <p><span class="image left"><img src="../images/imgsasdesc.png" alt="" /></span>This project was my first publications as the lead author!<p>
-                    <p>In chemical applications of AI, it is important to get the information about molecules into a machine readable form. This is more trivial
+                    </p><span class="image left"><img src="../images/imgsasdesc.png" alt="" /></span>This project was my first publications as the lead author!</p>
+                    </p>In chemical applications of AI, it is important to get the information about molecules into a machine readable form. This is more trivial
                     across other areas where you can work with tables of numbers, images or even encoded categories. With molecules however, capturing important details
                     as inputs a computer can actually use is more difficult, especially when you consider we are working in an environment where there are
                     quite literally infinite inputs. Here, we tried just drawing the molecules and then using deep learning for computer vision. We assessed against other
-                    common molecular representations and the images performed much better. <p>
-                    <p>This work was also presented at the MRS spring meet conference. You can watch the talk using the button below!</p>
+                    common molecular representations and the images performed much better. </p>
+                    </p>This work was also presented at the MRS spring meet conference. You can watch the talk using the button below!</p>
+
+                    <h5>Reference:<h5>
+                    </p>Wilkinson, M.R, Martinez-Hernandez, U, Wilson, C.C et al. Images of chemical structures as molecular
+                    representations for deep learning. Journal of Materials Research (2022), https://doi.org/10.1557/s43578-022-00628-9</p>
 
                     <a href="https://www.sciencedirect.com/science/article/pii/S0022354920303567?via%3Dihub" class="button">Go to Paper</a>
                     <a href="https://www.linkedin.com/posts/matthew-wilkinson16_sustainable-activity-6947600512355557377-PIRY?utm_source=linkedin_share&utm_medium=member_desktop_web" class="button primary">See Conference Video</a>
@@ -62,8 +66,8 @@
                     <h2>2020</h2>
 
                     <h3>Concurrent Antisolvent Electrospraying: A Novel Continuous Crystallization Technique</h3>
-                    <p><span class="image left"><img src="../images/elecspray.jpg" alt="" /></span>This paper was the first publication I was ever a part of!<p>
-                    <p>In a strange "in at the deep end" moment, in the early months of my PhD, my supervisor suggested we
+                    </p><span class="image left"><img src="../images/elecspray.jpg" alt="" /></span>This paper was the first publication I was ever a part of!</p>
+                    </p>In a strange "in at the deep end" moment, in the early months of my PhD, my supervisor suggested we
                         attempt what he called "a paper in a week". Hence, each of the authors on the publication were members of the group
                         at the time. The work looked to combine antisolvent crystallization with electrospraying, the latter being
                         a continuous crystallization method our group had been working on. We each took on differing parts, mine being
@@ -71,7 +75,13 @@
                         normalize the PXRD patterns autonomously, without lots of tinkering on Excel. Given this was my first few weeks of programming,
                         and having seen "Automate the boring stuff" advertised to me often, this seemed a fairly appropriate
                         introduction to programming. </p>
-                    <h4>Actions</h4>
+
+                    <h5>Reference:<h5>
+                        </p>Perge, L, Gr ̈ols, J, Segura, D.F, Al-Ani, A, Wilkinson, M, Castro-Dominguez, B, Concurrent Antisolvent
+                        Electrospraying: A Novel Continuous Crystallization Technique, Journal of Pharmaceutical Sciences, (2020),
+                        https://doi.org/10.1016/j.xphs.2020.06.023</p>
+
+
 
                     <a href="https://www.sciencedirect.com/science/article/pii/S0022354920303567?via%3Dihub" class="button">Go to Paper!</a>
 
