--- a/research_output/conferences.html
+++ b/research_output/conferences.html
@@ -46,9 +46,29 @@
                     <hr class="major" />
                     <h2>2022</h2>
 
+                    <h3>RADNET: Incident Prediction in Spatio-Temporal Road Graph Networks Using Traffic Forecasting</h3>
+                    </p><span class="image left"><img src="../images/radnet.png" alt="" /></span>This work was carried out as part of my internship at TRL software
+                    in partnership with the Alan Turing Institute.</p>
+                    </p>This was a collaborative project between myself and <a href="https://shreshthtuli.github.io/">Shreshth Tuli</a>, where we were tasked with the
+                    identification of anomalies in noisy, spacio-temporal road graph networks that covered Radcliffe, Greater Manchester, UK. </p>
+
+                    </p>This is currently under review for NeurIPS 2022!</p>
+
+                    <h5>Reference:<h5>
+                    </p>RADNET: Incident Prediction in Spatio-Temporal Road Graph Networks Using Traffic Forecasting’,
+                        2022 IJCAI Workshop on Artificial Intelligence for Time Series Analysis: Theory, Algorithms, and
+                        Applications, Vienna, Austria, 24/07/22.</p>
+
+                    <a href="https://arxiv.org/abs/2206.05602" class="button primary">Go to Paper</a>
+
+
                     <h3>Images as Molecular Descriptors for Materials Discovery</h3>
-                    <p><span class="image left"><img src="../images/imgsasdesc.png" alt="" /></span>This project was my first presentation at an international conference!
-                    After the presentations, the work was published in the Journal of Materials Research. You can find more details in the Journal Articles section of this website!<p>
+                    </p><span class="image left"><img src="../images/imgsasdesc.png" alt="" /></span>This project was my first presentation at an international conference!
+                    After the presentations, the work was published in the Journal of Materials Research. You can find more details in the Journal Articles section of this website!</p>
+
+                    <h5>Reference:<h5>
+                    </p>Wilkinson, M, Martinez Hernandez, U, & Castro Dominguez, B, 2022, ’Images as Molecular Descriptors for Materials
+                    Discovery’, 2022 MRS Spring Meeting, Honolulu, USA United States, 8/05/22 - 25/05/22</p>
 
                     <a href="https://www.sciencedirect.com/science/article/pii/S0022354920303567?via%3Dihub" class="button primary">Go to Paper</a>
                     <a href="https://mrw-code.github.io/research_output/journal_articles.html#imgs_vs_desc_journal_article" class="button">See In Journal Articles</a>
