--- a/aboutme.html
+++ b/aboutme.html
@@ -55,21 +55,20 @@
           </dd>
           <dt>A-Levels, Angmering School (2013 - 2015)</dt>
           <dd>
-            <p>Biology (A*)</p>
-            <p>Chemistry (A)</p>
-            <p>Mathematics (B)</p>
-            <p>AS-Level Physics (B)</p>
+            <p>Biology (A*), Chemistry (A), Mathematics (B), AS-Level Physics (B)</p>
           </dd>
           <dt>GCSE, Angmering School (2008-2013)</dt>
           </dd>
-            <p>10 grade A*, 2 grade A including Mathematics (2 x A*) and English (A*)</p>
+            <p> 10 grade A* (including Mathematics and English), 2 grade A</p>
           </dd>
         </dl>
 
         <hr class="major" />
 
         <h2>Research Interests</h2>
-        <p>Here are my research interests<p>
+        <p>I havent added this section formally yet, so if you are here early, check out my "3 Min Thesis" talk!<p>
+        <p>Keep in mind, the rules for these talks say 1 slide, so make sure the sound is on as the side wont move.<p>
+        <a href="https://www.linkedin.com/posts/matthew-wilkinson16_sustainable-activity-6947600512355557377-PIRY?utm_source=linkedin_share&utm_medium=member_desktop_web" class="button primary">3MT Talk</a>
         <hr class="major" />
 
       </section>
