--- a/research_output/conferences.html
+++ b/research_output/conferences.html
@@ -70,7 +70,7 @@
                     </p>Wilkinson, M, Martinez Hernandez, U, & Castro Dominguez, B, 2022, ’Images as Molecular Descriptors for Materials
                     Discovery’, 2022 MRS Spring Meeting, Honolulu, USA United States, 8/05/22 - 25/05/22</p>
 
-                    <a href="https://www.sciencedirect.com/science/article/pii/S0022354920303567?via%3Dihub" class="button primary">Go to Paper</a>
+                    <a href="https://link.springer.com/article/10.1557/s43578-022-00628-9" class="button primary">Go to Paper</a>
                     <a href="https://mrw-code.github.io/research_output/journal_articles.html#imgs_vs_desc_journal_article" class="button">See In Journal Articles</a>
                     <a href="https://www.linkedin.com/posts/matthew-wilkinson16_sustainable-activity-6947600512355557377-PIRY?utm_source=linkedin_share&utm_medium=member_desktop_web" class="button primary">See Presentation Video</a>
 
