more buttons homepage linked

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 										<h3>Images of Chemical Structures as Molecular Representations for Deep Learning</h3>
 										<p>Wilkinson, M.R., Martinez-Hernandez, U., Wilson, C.C. et al. Images of chemical structures as molecular representations for deep learning. Journal of Materials Research (2022). https://doi.org/10.1557/s43578-022-00628-9</p>
 										<ul class="actions">
-											<li><a href="#" class="button">More</a></li>
+											<li><a href="https://mrw-code.github.io/research_output/journal_articles.html#imgs_vs_desc_journal_article" class="button">More</a></li>
 										</ul>
 									</article>
 									<article>
@@ -74,7 +74,7 @@
 										<p>Tuli, S., Wilkinson, M.R. and Kettell, C., 2022. RadNet: Incident Prediction in Spatio-Temporal Road Graph Networks Using Traffic Forecasting,
 											IJCAI 2022 Workshop on AI for Time Series Analysis, arXiv preprint arXiv:2206.05602.</p>
 										<ul class="actions">
-											<li><a href="#" class="button">More</a></li>
+											<li><a href="https://mrw-code.github.io/research_output/conferences.html#radnet" class="button">More</a></li>
 										</ul>
 									</article>
 									<article>
@@ -89,7 +89,7 @@
 											ISSN 0022-3549,
 											https://doi.org/10.1016/j.xphs.2020.06.023.</p>
 										<ul class="actions">
-											<li><a href="#" class="button">More</a></li>
+											<li><a href="https://mrw-code.github.io/research_output/journal_articles.html#elecspray_article" class="button">More</a></li>
 										</ul>
 									</article>
 									<article>
