--- a/research_output/conferences.html
+++ b/research_output/conferences.html
@@ -46,7 +46,7 @@
                     <hr class="major" />
                     <h2>2022</h2>
 
-                    <h3>RADNET: Incident Prediction in Spatio-Temporal Road Graph Networks Using Traffic Forecasting</h3>
+                    <h3><a id="radnet">RADNET: Incident Prediction in Spatio-Temporal Road Graph Networks Using Traffic Forecasting</a></h3>
                     </p><span class="image left"><img src="../images/radnet.png" alt="" /></span>This work was carried out as part of my internship at TRL software
                     in partnership with the Alan Turing Institute.</p>
                     </p>This was a collaborative project between myself and <a href="https://shreshthtuli.github.io/">Shreshth Tuli</a>, where we were tasked with the
@@ -61,6 +61,7 @@
 
                     <a href="https://arxiv.org/abs/2206.05602" class="button primary">Go to Paper</a>
 
+                    <hr class="major" />
 
                     <h3>Images as Molecular Descriptors for Materials Discovery</h3>
                     </p><span class="image left"><img src="../images/imgsasdesc.png" alt="" /></span>This project was my first presentation at an international conference!
