--- a/research_output/journal_articles.html
+++ b/research_output/journal_articles.html
@@ -65,7 +65,7 @@
                     <hr class="major" />
                     <h2>2020</h2>
 
-                    <h3>Concurrent Antisolvent Electrospraying: A Novel Continuous Crystallization Technique</h3>
+                    <h3><a id="elecspray_article">Concurrent Antisolvent Electrospraying: A Novel Continuous Crystallization Technique</a></h3>
                     </p><span class="image left"><img src="../images/elecspray.jpg" alt="" /></span>This paper was the first publication I was ever a part of!</p>
                     </p>In a strange "in at the deep end" moment, in the early months of my PhD, my supervisor suggested we
                         attempt what he called "a paper in a week". Hence, each of the authors on the publication were members of the group
